[project]
name = "hello-api"
version = "0"
requires-python = "==3.13.*"

# Run time dependencies
dependencies = ["fastapi", "granian", "stamina"]

# Depdencies only needed for various environments
[dependency-groups]
dev = [
    "fastapi[standard]",
    "pytest"
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"