[project]
name = "customer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcus Wyche", email = "mkwyche@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "appetizer",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
appetizer = { path = "../appetizer" }
